[project]
name = "personal-stock-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "ruff>=0.6.3",
    "stqdm>=0.0.5",
    "streamlit>=1.38.0",
    "tqdm>=4.66.5",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.43",
]
